Fixed an issue where no data returned via the new Limit would count as a fresh user and show the intro box. Wrapped Things to return a total Count now instead, future proofed by being a child of a 'metadata' element in case we want to return more later. And some style tweaks and notes

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,10 @@ html {
   margin-right: auto;
 }
 
+.pos-fixed {
+  position: fixed;
+}
+
 .fleft {
   float: left;
 }
